--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext.kotlinVersion = '1.2.50'
     ext.junitVersion = "5.0.0"
     ext.junitPlatformVersion = "1.0.0"
+    ext.spekVersion = "1.1.5"
 
     repositories {
         mavenCentral()
@@ -13,7 +14,7 @@ buildscript {
     }
 }
 
-group 'com.orange.kata'
+group 'com.hervedarritchon.kata'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'kotlin'
@@ -21,6 +22,7 @@ apply plugin: 'org.junit.platform.gradle.plugin'
 
 repositories {
     mavenCentral()
+    maven { url "http://dl.bintray.com/jetbrains/spek" }
 }
 
 dependencies {
@@ -29,6 +31,9 @@ dependencies {
 
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+
+    testCompile "org.jetbrains.spek:spek-api:$spekVersion"
+    testRuntime "org.jetbrains.spek:spek-junit-platform-engine:$spekVersion"
 
     runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     runtime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
