--- a/junit5.gradle
+++ b/junit5.gradle
@@ -1,8 +1,12 @@
-
 junitPlatform {
     filters {
+
         tags {
             //include 'fast'
+        }
+
+        engines {
+            include 'spek'
         }
     }
 }
